# rbterm

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Info.plist  Makefile  README.md  run.sh  serve-web.sh
.github/workflows/: release.yml  web.yml
assets/: rbterm.rc
assets/fonts/: LICENSES.md
docs/: BENCHMARKING.md
src/: cast.c  cast.h  emoji.h  emoji_mac.m  emoji_stub.c  ffmpeg_embedded.c  ffmpeg_embedded.h  ffmpeg_embedded.rc  gif_encoder.c  gif_encoder.h  hud.c  hud.h  input.c  input.h  kitty.c  kitty.h  main.c  multiwin.c  multiwin.h  pty.h  pty_dispatch.c  pty_fake.c  pty_internal.h  pty_ssh.c  pty_ssh_stub.c  pty_unix.c  pty_win.c  rec_effects.c  rec_effects.h  render.c  render.h  screen.c  screen.h  shape.c  shape.h  sixel.c  sixel.h  theme.c  theme.h  themes_embedded.h  (+3 more)
tools/: bench-here.sh  bench-summary.sh  echo_bench.c  gen_fonts.sh  gen_icon.c  gen_themes.sh  ligature-test.sh  multiwin_poc.c  parser_bench.c  rbterm-shell-integration.bash  rbterm-shell-integration.zsh  run-benchmark.sh
web/: shell.html
